--- a/ArmadillosManager/Views/Responsable/EditarJugador.cshtml
+++ b/ArmadillosManager/Views/Responsable/EditarJugador.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Text.Json;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model ArmadillosManager.Models.ViewModels.AgregarJugadorViewModel
 @{
     Layout = "_Layout";
@@ -11,7 +10,7 @@
             <!--Parte de Arriba-->
             <h1>Gestion de Jugadores</h1>
             <nav>
-                <h2>Agregando Jugador</h2>
+                <h2>Editar Jugador</h2>
             </nav>
         </div>
 
@@ -45,7 +44,7 @@
         <hr />*@
         <div class="infocontainer">
             <h2>Datos del Jugador</h2>
-            <form method="post" action="~/Responsable/AgregarJugador">
+            <form method="post" action="~/EditarJugador">
                 <h3>Nombre</h3>
                 <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre">
                 <div class="divv">
@@ -63,11 +62,11 @@
                     </div>
                 </div>
                 <h3>Domicilio</h3>
-                <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion">
+                <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion" />
                 <h3>telefono</h3>
-                <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono">
+                <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono" />
                 <h3>Patrocinador</h3>
-                <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC">
+                <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC" />
                 @*<div id="autocomplete"></div>
 
                 <script src="~/Views/LarvaScript.js"></script>
