--- a/ArmadillosManager/Views/Shared/_Layout.cshtml
+++ b/ArmadillosManager/Views/Shared/_Layout.cshtml
@@ -1,31 +1,34 @@
-﻿@{
-}
+﻿
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9c74a791f2.js" crossorigin="anonymous"></script>
+    <link href="~/estilos.css" rel="stylesheet" />
     <title>Gestion de los Jugadores</title>
 </head>
 <body>
-    <!--Barra Lateral-->
-    <img>
-    <img>
-    <ul>
-        <li>
-            <a>Pagos</a>
-        </li>
-        <li>
-            <a href="~/GestionarResponsable">Responsables</a>
-        </li>
-        <li>
-            <a href="~/">Jugadores</a>
-        </li>
-        <li>
-            <a>Temporada</a>
-        </li>
-    </ul>
+    <div class="sidebar">
+        <!--Barra Lateral-->
+        <img />
+        <img />
+        <ul>
+            <li>
+                <a style="border-right: none;" href="~/GestionarPago">Pagos</a>
+            </li>
+            <li>
+                <a style="border-right: none;" href="~/GestionarResponsable">Responsables</a>
+            </li>
+            <li>
+                <a style="color: gold; font-weight: 500;" href="~/">Jugadores</a>
+            </li>
+            <li>
+                <a style="border-right: none;" href="~/GestionarTemporada">Temporada</a>
+            </li>
+        </ul>
+    </div>
     @RenderBody()
 </body>
 </html>
