--- a/ArmadillosManager/Views/Responsable/GestionarJugadores.cshtml
+++ b/ArmadillosManager/Views/Responsable/GestionarJugadores.cshtml
@@ -59,9 +59,9 @@
                             <td>@item.IdResponsableNavigation.Nombre</td>
                             <td>
                                 <div class="gestionDad">
-                                    <div class="mascara">
+                                    @*<div class="mascara">
                                         <i class="fa-sharp fa-solid fa-ellipsis-vertical"></i>
-                                    </div>
+                                    </div>*@
                                     <div class="opcionesGestion">
                                         <i class="fa-sharp fa-solid fa-trash"></i>
                                         <a href="~/Responsable/EditarJugador/@(item.Id)"><i class="fa-solid fa-eye"></i></a>
