--- a/ArmadillosManager/Views/Responsable/GestionarResponsable.cshtml
+++ b/ArmadillosManager/Views/Responsable/GestionarResponsable.cshtml
@@ -48,9 +48,9 @@
                             <td>@item.Correo</td>
                             <td>
                                 <div class="gestionDad">
-                                    <div class="mascara">
+                                    @*<div class="mascara">
                                         <i class="fa-sharp fa-solid fa-ellipsis-vertical"></i>
-                                    </div>
+                                    </div>*@
                                     <div class="opcionesGestion">
                                         <a href="~/Responsable/EditarResponsable/@(item.Id)"><i class="fa-solid fa-eye"></i></a>
                                         <i class="fa-sharp fa-solid fa-trash"></i>
