--- a/ArmadillosManager/Views/Responsable/AgregarJugador.cshtml
+++ b/ArmadillosManager/Views/Responsable/AgregarJugador.cshtml
@@ -47,7 +47,7 @@
             <h2>Datos del Jugador</h2>
             <form method="post" action="~/Responsable/AgregarJugador">
                 <h3>Nombre</h3>
-                <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre">
+                <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre" />
                 <div class="divv">
                     <div>
                         <h3>Categoria</h3>
@@ -63,11 +63,11 @@
                     </div>
                 </div>
                 <h3>Domicilio</h3>
-                <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion">
+                <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion" />
                 <h3>telefono</h3>
-                <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono">
+                <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono" />
                 <h3>Patrocinador</h3>
-                <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC">
+                <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC" />
                 @*<div id="autocomplete"></div>
 
                 <script src="~/Views/LarvaScript.js"></script>
