--- a/ArmadillosManager/Views/Responsable/EditarResponsable.cshtml
+++ b/ArmadillosManager/Views/Responsable/EditarResponsable.cshtml
@@ -36,7 +36,7 @@
                     </p>
                     <div class="btncontainer">
                         <input type="submit" href="~/GestionarResponsable" class="addbtn" value="Aceptar" />
-                        <button formnovalidate href="~/GestionarResponsable" class="imprentbtn">
+                        <button formnovalidate href="~/" class="imprentbtn">
                             <i class="fa-sharp fa-solid fa-xmark"></i>
                         </button>
                     </div>
