--- a/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
+++ b/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
@@ -1,9 +1,9 @@
-﻿@using System.Text.Json;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model ArmadillosManager.Models.ViewModels.AgregarJugadorViewModel
 @{
-    Layout = "_Layout";
+    Layout = "_LayoutResponsable";
 }
+@*Este View es el del RESPONSABLE*@
 <body>
 
     <div class="contenido">
@@ -11,43 +11,16 @@
             <!--Parte de Arriba-->
             <h1>Gestion de Jugadores</h1>
             <nav>
-                <h2>Agregando Jugador</h2>
+                <h2>Editar Jugador</h2>
             </nav>
         </div>
 
         <!--Info-->
-        @*<h2>Patrocinador</h2>
-        <table>
-        <tr>
-        <th>Id</th>
-        <th>Responsable</th>
-        <th>RFC</th>
-        <th>Correo Electronico</th>
-        <th>*</th>
-        </tr>
-        @foreach (var item in Model.Responsables)
-        {
-        <tr>
-        <td>@item.Id</td>
-        <td>
-        <h6>@item.Nombre</h6>
-        <ul>
-        <li>@item.Direccion</li>
-        <li>@item.Telefono</li>
-        </ul>
-        </td>
-        <td>@item.Rfc</td>
-        <td>@item.Correo</td>
-        <td><Button>Gestionar</Button></td>
-        </tr>
-        }
-        </table>
-        <hr />*@
         <div class="infocontainer">
             <h2>Datos del Jugador</h2>
-            <form method="post" action="~/Responsable/AgregarJugador">
+            <form method="post" action="~/Home/EditarJugador">
                 <h3>Nombre</h3>
-                <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre" />
+                <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre">
                 <div class="divv">
                     <div>
                         <h3>Categoria</h3>
@@ -82,7 +55,7 @@
                     @Html.ValidationSummary()
                 </p>
                 <div class="btncontainer">
-                    <input class="addbtn" href="~/" type="submit" value="Enviar" />
+                    <input class="addbtn" href="~/GestionarPrincipal" type="submit" value="Enviar" />
                     <button formnovalidate href="~/" class="imprentbtn">
                         <i class="fa-sharp fa-solid fa-xmark"></i>
                     </button>
