--- a/ArmadillosManager/wwwroot/estilos.css
+++ b/ArmadillosManager/wwwroot/estilos.css
@@ -4,13 +4,46 @@ html
     max-height: 100%;
 }
 
+header
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 10vh;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+header p
+{
+    margin: auto 4vw;
+    color: white;
+}
+
+header h2
+{
+    color: white;
+}
+
+.divusuario
+{
+    margin: auto 4vw;
+    display: flex;
+}
+
+.divusuario i
+{
+    color: white;
+}
+
+
 body
 {
+    padding-top: 10vh;
     height: 100%;
     max-height: 100%;
     margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 5fr;
 }
 
 h1
@@ -31,22 +64,6 @@ h2
     font-weight: 500;
     font-size: x-large;
     width: max-content;
-}
-
-.sidebar a
-{
-    text-decoration: none;
-}
-
-.sidebar h2
-{
-    margin: 5px 10px;
-    font-family: 'Segoe UI';
-    color: white;
-    font-weight: 500;
-    font-size: x-large;
-    width: max-content;
-    text-decoration: none;
 }
 
 .tablacontainer h2
@@ -106,7 +123,7 @@ input
 input[type="date"]
 {
     margin: 0px 10px 0px 0px;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid black;
     width: 100%;
     font-size: x-large;
@@ -231,6 +248,11 @@ select
     border-left: 1px solid grey;
 }
 
+.contenedorfiltro input[type="date"]
+{
+    font-size:medium ;
+}
+
 .tablacontainer
 {
     margin: 10px 0px;
@@ -313,6 +335,15 @@ select
     margin: 10px 0px;
     border: 1px solid grey;
     border-bottom: 6px solid gold;
+}
+
+.infocontainerResponsable
+{
+    padding: 10px;
+    width: calc(100% - 20px);
+    margin: 10px 0px;
+    border: 1px solid grey;
+    border-top: 6px solid gold;
 }
 
 .infocontainer .divv
