Se arreglo el sidebar de la vista de administrador

--- a/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
+++ b/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
@@ -4,7 +4,7 @@
     Layout = "_LayoutResponsable";
 }
 @*Este View es el del RESPONSABLE*@
-<body>
+<body class="bodyResp">
 
     <div class="contenido">
         <div class="header">
