--- a/ArmadillosManager/Areas/Responsables/Views/Home/GestionarPrincipal.cshtml
+++ b/ArmadillosManager/Areas/Responsables/Views/Home/GestionarPrincipal.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "_LayoutResponsable";
 }
-<body>
+<body class="bodyResp">
     <header>
         <!--<img> el texto de abajo es un logo-->
         <p>ARMADILLOS</p>
