--- a/ArmadillosManager/Areas/Administrador/Views/Responsable/AgregarJugador.cshtml
+++ b/ArmadillosManager/Areas/Administrador/Views/Responsable/AgregarJugador.cshtml
@@ -82,8 +82,8 @@
                     @Html.ValidationSummary()
                 </p>
                 <div class="btncontainer">
-                    <input type="submit" class="addbtn" href="~/" value="Enviar" />
-                    <button formnovalidate href="~/" class="imprentbtn">
+                    <input type="submit" class="addbtn" href="~/GestionarJugadores" value="Enviar" />
+                    <button formnovalidate href="~/GestionarJugadores" class="imprentbtn">
                         <i class="fa-sharp fa-solid fa-xmark"></i>
                     </button>
                 </div>
