--- a/ArmadillosManager/Views/Shared/_Layout.cshtml
+++ b/ArmadillosManager/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/estilos.css" rel="stylesheet" />
     <title>Gestion de los Jugadores</title>
 </head>
-<body>
+<body style="height: 100vh;">
     <div class="sidebar">
         <!--Barra Lateral-->
         <img />
