--- a/ArmadillosManager/wwwroot/estilos.css
+++ b/ArmadillosManager/wwwroot/estilos.css
@@ -52,6 +52,20 @@ body {
     margin: 0;
 }
 
+.bodyLogin h1{
+    margin: 0;
+    font-size: xx-large;
+    font-family: 'Segoe UI';
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.bodyLogin label {
+    margin: 10px 0;
+    font-family: 'Segoe UI';
+    font-weight: lighter;
+}
+
 h1
 {
     margin: 0;
