--- a/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
+++ b/ArmadillosManager/Areas/Responsables/Views/Home/EditarJugador.cshtml
@@ -4,63 +4,69 @@
     Layout = "_LayoutResponsable";
 }
 @*Este View es el del RESPONSABLE*@
-<body class="bodyResp">
+<body>
 
-    <div class="contenido">
-        <div class="header">
-            <!--Parte de Arriba-->
-            <h1>Gestion de Jugadores</h1>
-            <nav>
-                <h2>Editar Jugador</h2>
-            </nav>
+    <div class="divResp">
+
+        <div class="contenido">
+            <div class="header">
+                <!--Parte de Arriba-->
+                <h1>Gestion de Jugadores</h1>
+                <nav>
+                    <h2>Editar Jugador</h2>
+                </nav>
+            </div>
+
+            <!--Info-->
+            <div class="infocontainer">
+                <h2>Datos del Jugador</h2>
+                <form method="post" action="~/Home/EditarJugador">
+                    <h3>Nombre</h3>
+                    <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre">
+                    <div class="divv">
+                        <div>
+                            <h3>Categoria</h3>
+                            <select id="cmbCategoria" required="required" asp-for="Jugador.Categoria" asp-items="@(new SelectList(Model.Categorias,"IdCategoria","Categoria1"))">
+                                <option selected="selected" value="">-- Seleccionar categoria --</option>
+                            </select>
+                        </div>
+                        <div>
+                            <h3>Liga</h3>
+                            <select id="cmbLiga" required="required" asp-for="Jugador.Liga" asp-items="@(new SelectList(Model.Ligas,"IdLiga","Liga1"))">
+                                <option selected="selected" value="">-- Seleccionar liga --</option>
+                            </select>
+                        </div>
+                    </div>
+                    <h3>Domicilio</h3>
+                    <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion" />
+                    <h3>telefono</h3>
+                    <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono" />
+                    <h3>Patrocinador</h3>
+                    <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC" />
+                    @*<div id="autocomplete"></div>
+
+                    <script src="~/Views/LarvaScript.js"></script>
+                    <script>
+                    var nombres = @Html.Raw(JsonSerializer.Serialize(Model.Responsables));
+                    ReactDOM.render(
+                    React.createElement(Autocomplete, { suggestions: nombres }),
+                    document.getElementById('autocomplete')
+                    );
+                    </script>*@
+                    <p id="error">
+                        @Html.ValidationSummary()
+                    </p>
+                    <div class="btncontainer">
+                        <input class="addbtn" href="~/GestionarPrincipal" type="submit" value="Enviar" />
+                        <button formnovalidate href="~/" class="imprentbtn">
+                            <i class="fa-sharp fa-solid fa-xmark"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
 
-        <!--Info-->
-        <div class="infocontainer">
-            <h2>Datos del Jugador</h2>
-            <form method="post" action="~/Home/EditarJugador">
-                <h3>Nombre</h3>
-                <input type="text" id="txtNombre" required="required" asp-for="Jugador.Nombre">
-                <div class="divv">
-                    <div>
-                        <h3>Categoria</h3>
-                        <select id="cmbCategoria" required="required" asp-for="Jugador.Categoria" asp-items="@(new SelectList(Model.Categorias,"IdCategoria","Categoria1"))">
-                            <option selected="selected" value="">-- Seleccionar categoria --</option>
-                        </select>
-                    </div>
-                    <div>
-                        <h3>Liga</h3>
-                        <select id="cmbLiga" required="required" asp-for="Jugador.Liga" asp-items="@(new SelectList(Model.Ligas,"IdLiga","Liga1"))">
-                            <option selected="selected" value="">-- Seleccionar liga --</option>
-                        </select>
-                    </div>
-                </div>
-                <h3>Domicilio</h3>
-                <input type="text" id="txtDomicilio" required="required" asp-for="Jugador.Direccion" />
-                <h3>telefono</h3>
-                <input type="text" id="txtTelefono" required="required" asp-for="Jugador.Telefono" />
-                <h3>Patrocinador</h3>
-                <input name="txtRFC" type="text" id="txtRFC" required="required" asp-for="RFC" />
-                @*<div id="autocomplete"></div>
-
-                <script src="~/Views/LarvaScript.js"></script>
-                <script>
-                var nombres = @Html.Raw(JsonSerializer.Serialize(Model.Responsables));
-                ReactDOM.render(
-                React.createElement(Autocomplete, { suggestions: nombres }),
-                document.getElementById('autocomplete')
-                );
-                </script>*@
-                <p id="error">
-                    @Html.ValidationSummary()
-                </p>
-                <div class="btncontainer">
-                    <input class="addbtn" href="~/GestionarPrincipal" type="submit" value="Enviar" />
-                    <button formnovalidate href="~/" class="imprentbtn">
-                        <i class="fa-sharp fa-solid fa-xmark"></i>
-                    </button>
-                </div>
-            </form>
-        </div>
     </div>
+
+    
 </body>
