--- a/ArmadillosManager/Views/Shared/_Layout.cshtml
+++ b/ArmadillosManager/Views/Shared/_Layout.cshtml
@@ -10,64 +10,70 @@
     <title>Gestion de los Jugadores</title>
 </head>
 <body style="height: 100vh;">
-    <div class="sidebar">
-        <!--Barra Lateral-->
-        <img />
-        <img />
-        <ul>
-            @*GestionarPago,GestionarResponsable,GestionarJugadores,GestionarTemporada
-            ViewBag.Seleccion
-            *@
-            @if (ViewBag.Seleccion == 0)
-            {
-                <li>
-                    <a style="color: gold; font-weight: 500;" href="~/GestionarPago">Pagos</a>
-                </li>
-            }
-            else
-            {
-                <li>
-                    <a style="border-right: none;" href="~/GestionarPago">Pagos</a>
-                </li>
-            }
-            @if (ViewBag.Seleccion == 1)
-            {
-                <li>
-                    <a style="color: gold; font-weight: 500;" href="~/GestionarResponsable">Responsables</a>
-                </li>
-            }
-            else
-            {
-                <li>
-                    <a style="border-right: none;" href="~/GestionarResponsable">Responsables</a>
-                </li>
-            }
-            @if (ViewBag.Seleccion == 2)
-            {
-                <li>
-                    <a style="color: gold; font-weight: 500;" href="~/GestionarJugadores">Jugadores</a>
-                </li>
-            }
-            else
-            {
-                <li>
-                    <a style="border-right: none;" href="~/GestionarJugadores">Jugadores</a>
-                </li>
-            }
-            @if (ViewBag.Seleccion == 3)
-            {
-                <li>
-                    <a style="color: gold; font-weight: 500;" href="~/GestionarTemporada">Temporada</a>
-                </li>
-            }
-            else
-            {
-                <li>
-                    <a style="border-right: none;" href="~/GestionarTemporada">Temporada</a>
-                </li>
-            }
-        </ul>
+
+    <div class="divAdmin">
+
+        <div class="sidebar">
+            <!--Barra Lateral-->
+            <img />
+            <img />
+            <ul>
+                @*GestionarPago,GestionarResponsable,GestionarJugadores,GestionarTemporada
+                ViewBag.Seleccion
+                *@
+                @if (ViewBag.Seleccion == 0)
+                {
+                    <li>
+                        <a style="color: gold; font-weight: 500;" href="~/GestionarPago">Pagos</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a style="border-right: none;" href="~/GestionarPago">Pagos</a>
+                    </li>
+                }
+                @if (ViewBag.Seleccion == 1)
+                {
+                    <li>
+                        <a style="color: gold; font-weight: 500;" href="~/GestionarResponsable">Responsables</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a style="border-right: none;" href="~/GestionarResponsable">Responsables</a>
+                    </li>
+                }
+                @if (ViewBag.Seleccion == 2)
+                {
+                    <li>
+                        <a style="color: gold; font-weight: 500;" href="~/GestionarJugadores">Jugadores</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a style="border-right: none;" href="~/GestionarJugadores">Jugadores</a>
+                    </li>
+                }
+                @if (ViewBag.Seleccion == 3)
+                {
+                    <li>
+                        <a style="color: gold; font-weight: 500;" href="~/GestionarTemporada">Temporada</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a style="border-right: none;" href="~/GestionarTemporada">Temporada</a>
+                    </li>
+                }
+            </ul>
+        </div>
+        @RenderBody()
+
     </div>
-    @RenderBody()
+    
 </body>
 </html>
