Se arreglo vistas de responsable

--- a/ArmadillosManager/Areas/Responsables/Views/Shared/_LayoutResponsable.cshtml
+++ b/ArmadillosManager/Areas/Responsables/Views/Shared/_LayoutResponsable.cshtml
@@ -10,5 +10,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion de los Jugadores</title>
 </head>
-@RenderBody()
+<body>
+    <div class="divResp">
+
+        <header>
+            <!--<img> el texto de abajo es un logo-->
+            <p>ARMADILLOS</p>
+            <div class="divusuario">
+                <h2>Responsable</h2>
+                <i class="fa-sharp fa-solid fa-image-user"></i>
+            </div>
+        </header>
+        @RenderBody()
+
+    </div>
+
+
+</body>
+
 </html>
