se elimino la clase del body y se agrego a un div contenedor

--- a/ArmadillosManager/Views/Login/IniciarSesion.cshtml
+++ b/ArmadillosManager/Views/Login/IniciarSesion.cshtml
@@ -10,7 +10,7 @@
     <link href="~/estilos.css" rel="stylesheet" />
     <title>Gestion de los Jugadores</title>
 </head>
-<body class="BodyLogin">
+<body class="divLogin">
 
     <div>
         <div>
