Se agrego un div con clase que contiene toda la vista login

--- a/ArmadillosManager/Views/Login/IniciarSesion.cshtml
+++ b/ArmadillosManager/Views/Login/IniciarSesion.cshtml
@@ -10,9 +10,9 @@
     <link href="~/estilos.css" rel="stylesheet" />
     <title>Gestion de los Jugadores</title>
 </head>
-<body class="divLogin">
+<body>
 
-    <div>
+    <div class="divLogin">
         <div>
 
             <h1>Iniciar Sesión</h1>
