Cambios y PDF AGREGADO (apartado del responsable)

--- a/ArmadillosManager/Views/Login/IniciarSesion.cshtml
+++ b/ArmadillosManager/Views/Login/IniciarSesion.cshtml
@@ -21,7 +21,7 @@
                 <label>Usuario:</label>
                 <input id="txtUserName" type="text" asp-for="UserName" /><br />
                 <label>Contraseña:</label>
-                <input id="txtPassword" type="text" asp-for="Password" />
+                <input id="txtPassword" type="password" asp-for="Password" />
                 <br />
                 @Html.ValidationSummary()
                 <input type="submit" value="Ingresar" />
