--- a/ArmadillosManager/Areas/Administrador/Views/Responsable/AgregarPago.cshtml
+++ b/ArmadillosManager/Areas/Administrador/Views/Responsable/AgregarPago.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model ArmadillosManager.Models.ViewModels.AgregarPagoViewModel
+@{
     Layout = "_Layout";
 }
 
@@ -54,4 +56,3 @@
             <td><Button>Gestionar</Button></td>
         </tr>
     </table>
-
